--- a/app/templates/header.jade
+++ b/app/templates/header.jade
@@ -3,7 +3,7 @@ html
     head
         title='BetterBoss'
         // Meta Tags
-        meta(name="charset" , content='utf-8')
+        meta(charset="utf-8")
         meta(name="viewport" , content="width=device-width, user-scalable=no")
         // Styles
         link(rel="stylesheet", type="text/css", href='https://necolas.github.io/normalize.css/3.0.2/normalize.css')
