Get name of localstorage

--- a/app/frame3.jade
+++ b/app/frame3.jade
@@ -8,7 +8,7 @@ body(ng-app='BetterBoss',ng-controller='GetCashData' ,class="FrameScreen" , ng-i
             img(src='./assets/images/eljefazo.png')
         div.CloudWithText
             p.TitleCloud
-                | ¡Bienvenido Pocholo Godinez!
+                | ¡Bienvenido {{NamePeople}}!
             p.DescriptionCloud
                 | Para integrarte a mi staff y recibir beneficios personalizados, primero necesito unos ultimos datos.
             form
