Change modal view

--- a/app/dashboard.jade
+++ b/app/dashboard.jade
@@ -5,7 +5,7 @@ body(ng-app='BetterBoss',ng-controller='GetCashData' ,class="DashboardScreen" , 
         section.frame3
             header
                 .WelcomeMessage
-                    ¡Hola , Pocholo Godinez!
+                    ¡Hola , {{ NamePeople }}!
                 nav
                     a(href="#")
                         | Faq
