--- a/app/templates/header.jade
+++ b/app/templates/header.jade
@@ -12,6 +12,7 @@ html
         // Scripts
         script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js')
         script(src="./assets/js/angular-local-storage.min.js")
+        script(src="https://code.jquery.com/jquery-2.2.4.min.js" , integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" , crossorigin="anonymous")
         script(src="./assets/js/main.js")
-        
+    
     block ContainerDom
