--- a/staging/assets/styles/main.css
+++ b/staging/assets/styles/main.css
@@ -68,6 +68,25 @@ nav {
   padding: 8px 30px;
   border-radius: 2px; }
 
+.RegisterScreen .BoxLogin form input:nth-child(1) {
+  background-size: 30px;
+  background-image: url("../images/arroba.png");
+  background-repeat: no-repeat;
+  background-position: 1px; }
+
+.RegisterScreen .BoxLogin form input:nth-child(2) {
+  background-size: 40px;
+  background-image: url("../images/usuario.png");
+  background-repeat: no-repeat;
+  background-position: -4px; }
+
+.RegisterScreen .BoxLogin form input:nth-child(3) {
+  background-size: 40px;
+  background-image: url("../images/descarga.png");
+  background-repeat: no-repeat;
+  background-position: -4px; }
+
+/**/
 .BoxLogin form input:first-of-type {
   background-size: 40px;
   background-image: url("../images/usuario.png");
@@ -498,6 +517,54 @@ i.fa-home {
     border: 0;
     padding: 6px 8px;
     width: 200px; }
+
+.maybe.ServiceBox .ImgService {
+  border: 4px solid #AFAFAF; }
+  .maybe.ServiceBox .ImgService img {
+    -webkit-filter: grayscale(100%); }
+
+.maybe.ServiceBox .TitleService {
+  color: #AFAFAF; }
+
+.ImReady button {
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  background: #3DA4C5;
+  color: #fff;
+  border: 0;
+  padding: 7px 8px;
+  width: 200px;
+  font-family: 'helsinki';
+  font-size: 17px;
+  margin-bottom: 100px; }
+
+/*Last Frame*/
+body.LastFrame {
+  background-image: url("../images/frame3.jpg");
+  width: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative; }
+
+.LastFrame .ButtonCenter {
+  width: 100%;
+  position: relative; }
+
+.LastFrame button {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  margin: 0 auto;
+  background: #3DA4C5;
+  color: #fff;
+  border: 0;
+  padding: 7px 8px;
+  width: 200px;
+  font-family: 'helsinki';
+  font-size: 17px; }
 
 /*Generic Classes*/
 .inline {
