--- a/app/assets/styles/_global.scss
+++ b/app/assets/styles/_global.scss
@@ -585,6 +585,9 @@ body.LastFrame{
 	    font-size: 17px;
 	}
 }
+.Help{
+	visibility: hidden;
+}
 /*Generic Classes*/ 
 .inline{
 	display: inline-block;
