--- a/staging/assets/styles/main.css
+++ b/staging/assets/styles/main.css
@@ -566,6 +566,9 @@ body.LastFrame {
   font-family: 'helsinki';
   font-size: 17px; }
 
+.Help {
+  visibility: hidden; }
+
 /*Generic Classes*/
 .inline {
   display: inline-block; }
