Connect questions - Change interface

--- a/staging/assets/styles/main.css
+++ b/staging/assets/styles/main.css
@@ -11,12 +11,23 @@ body {
   width: 90%;
   margin: 0 auto;
   padding-left: 40px;
-  margin-top: 30px; }
+  margin-top: 30px;
+  display: none; }
+
+.BoxOfQuestion#Question1 {
+  display: block; }
 
 .BoxOfQuestion .TitleQuestion {
+  text-align: center;
   margin-bottom: 20px;
   color: #333;
   text-transform: uppercase; }
+
+.BoxOfInput {
+  width: 50%;
+  margin: 0 auto;
+  position: relative;
+  max-width: 296px; }
 
 .HeaderQuestions {
   width: 100%;
@@ -49,6 +60,16 @@ body {
   text-align: center;
   border-radius: 100%;
   padding: 1px; }
+
+.BoxOfQuestion button {
+  background: #42A9A8;
+  border: 0;
+  padding: 8px;
+  float: right;
+  color: #fff;
+  box-shadow: 0 0 3px #333;
+  margin-top: 45px;
+  width: 200px; }
 
 @font-face {
   font-family: 'Gotham';
